# frankenfit

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README-pypi.md  README.md  add-tag  design_notes.md  index.html  index.md  pyproject.toml  requirements-dev.txt  setup-venv-dev  setup.cfg  tox.ini
.github/workflows/: build-dist.yml  docs.yml  linters.yml  mypy.yml  publish-testpypi.yml  pytest.yml  python-package.yml  testpypi.yml
codebases/local/ard-fit-pipelines/: pyproject.toml  setup.py
codebases/local/ard-fit-pipelines/notebooks/: Demo-1.ipynb  Dev-1.ipynb  Dev-2.ipynb  Dev-3-Datasets.ipynb  funky.py
codebases/local/ard-fit-pipelines/src/ard_fit_pipelines/: __init__.py  core.py  graph.py  transforms.py
codebases/local/ard-fit-pipelines/tests/: test_ard_fit_pipelines.py
current/: .buildinfo  api.html  backends.html  branching_and_grouping.html  cover.html  crossval.html  dataframes.html  examples.html  genindex.html  hyperparams.html  implementing_transforms.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  synopsis.html  tips_tricks.html  transforms_and_pipelines.html
current/.doctrees/: api.doctree  backends.doctree  branching_and_grouping.doctree  cover.doctree  crossval.doctree  dataframes.doctree  environment.pickle  examples.doctree  glue_cache.json  hyperparams.doctree  implementing_transforms.doctree  install.doctree  synopsis.doctree  tips_tricks.doctree  transforms_and_pipelines.doctree
current/_modules/: index.html
current/_modules/frankenfit/: backend.html  core.html  dataframe.html  params.html  universal.html
current/_sources/: api.md  implementing_transforms.md  synopsis.md  transforms_and_pipelines.md
current/_static/: pygments.css
docs/: Example-13-Dask-Testing.md  Example-4-SKLearn.md  Example-7-Visualize.md  Example-9-DataReader.md  _config.yml  _toc.yml  api.md  cover.md  dataframes.md  diamonds-out.csv  glossary.md  hyperparams_intro.md  implementing_transforms.md  install.md  intro.md  synopsis.md  tips_tricks.md  transform_and_pipelines.md  transforms_and_pipelines.md
docs/_static/: pygments_overrides.css
notebooks/: Demo-1.ipynb  Dev-10-Assign.ipynb  Dev-11-RefactorTransform.ipynb  Dev-2.ipynb  Dev-3-Datasets.ipynb  Dev-4-SKLearn.ipynb  Dev-5-GroupBy.ipynb  Dev-6-CrossValidate.ipynb  Dev-7-Visualize.ipynb  Dev-8-Dask.ipynb  Dev-8a-Dask-Advanced.ipynb  Dev-9-DataReader.ipynb  Dev-Refactor.ipynb
src/frankenfit/: __init__.py  backend.py  core.py  dataframe.py  dataframe_transforms.py  graph.py  io.py  mypy.py  params.py  timeseries.py  transforms.py  universal.py  universal_transforms.py
tests/: test_ard_fit_pipelines.py  test_backend.py  test_core.py  test_dataframe.py  test_frankenfit.py  test_pipelines_on_dask.py  test_timeseries.py  test_universal.py
