
[build-system]
# Note that running tests additionally requires pytest and pydataset, but they are not
# required for building the package. See tox.ini for test-time dependencies.
requires = ["setuptools>=62", "wheel", "setuptools_scm~=7.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "frankenfit"
version = "0.1"
authors = [
    {name = "Max Bane", email = "max@thebanes.org"}
]
requires-python = ">=3.9"
dependencies = [
    'attrs',
    'pandas',
    'pyarrow',
    'graphviz',
    'distributed',  # TODO: make this an extra?
]

[tool.mypy]
plugins = "frankenfit.mypy"
warn_unused_ignores = true
warn_redundant_casts = true
mypy_path = [
    "src",
    "tests",
]
files = [
    "src",
    "tests",
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:There is no current event loop:DeprecationWarning',
]
addopts = "-n auto"

[tool.coverage]

[tool.coverage.run]
omit = [
    "src/frankenfit/mypy.py"
]
