
[build-system]
# Note that running tests additionally requires pytest and pydataset, but they are not
# required for building the package. See tox.ini for test-time dependencies.
requires = ["setuptools>=62", "wheel", "setuptools_scm~=7.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "frankenfit"
version = "0.1"
authors = [
    {name = "Max Bane", email = "max@thebanes.org"}
]
requires-python = ">=3.8"
dependencies = [
    'attrs',
    'pandas',
    'pyarrow',
    'graphviz',
]

[project.optional-dependencies]
dask = [
    'distributed'
]

tests = [
    'frankenfit[dask]',
    'tox',
    'pytest',
    'pytest-xdist',
    'pytest-cov',
    'pydataset',
    'scikit-learn',
    'statsmodels',
    'mypy',
    'pandas-stubs',
]

docs = [
    'jupyter-book',
    'furo',
]

dev = [
    'frankenfit[dask,docs,tests]',
    'flake8',
    'flake8-pyproject',
    'pre-commit',
    'build',
]

[tool.flake8]
# for compat with black
max-line-length = 88

# in case someone runs `flake8` with no file args
extend-exclude = [
    'scratch_*',
    'docs',
    'dist',
    '.venv-dev',
    '.mypy-cache',
    '.pytest_cache',
    '.vscode',
    'notebooks',
]

# compat with black around slice operators
extend-ignore = ["E203"]

per-file-ignores = [
	# Unused imports are expected in package __init__.
	'__init__.py: F401',

	# function name should be lower case. Our convention can include class
	# names (which are upper case) in test function names.
	'*/tests/*.py: N802',
]


[tool.mypy]
plugins = "frankenfit.mypy"
warn_unused_ignores = true
warn_redundant_casts = true
mypy_path = [
    "src",
    "tests",
]
files = [
    "src",
    "tests",
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    'ignore:There is no current event loop:DeprecationWarning',
]
addopts = "-n auto"

[tool.coverage]
[tool.coverage.run]
omit = [
    "src/frankenfit/mypy.py"
]
